# d6

./: .markdownlint.yaml  README.md
lab_01/: .gitignore  Makefile  lab_01.md
lab_02/: lab_02.md  running_commands.md
lab_03/: env.yaml  justfile  lab_03.md  pyproject.toml
lab_03/src/: address.py  battery.py  coordinates.py  cpu.py  date_example.py  datetime_example.py  documentstats.py  julian.py  moon.py  sun.py  time_example.py
lab_03/src/original/: ATTRIBUTION.md
lab_04/: lab_04.md
lab_05/: lab_05.md
lab_06/: ATTRIBUTION.md  hello.js  http.js  lab_06.md
lab_07/: lab_07.md
lab_08/: lab_08.md  plt_cv2.py  plt_final.py  rpidata1.csv
lab_09/: intrusiondetection.uml  lab_09.md
lab_10/: lab_10.md
